# yaged

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/decoder/: mod.rs
src/decoder/steps/: color_map.rs  extension_block.rs  image_descriptor.rs  mod.rs  raster_data.rs  screen_descriptor.rs  signature.rs
src/encoder/: mod.rs
src/encoder/steps/: color_map.rs  extension_block.rs  mod.rs  screen_descriptor.rs  signature.rs
src/types/: mod.rs
