[package]
name = "yaged"
version = "0.1.0"
authors = ["Domenico Visconti <domenico.visconti819@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Yet another gif encoder decoder"
readme = "README.md"
homepage = "https://github.com/visd0m/yaged"
repository = "https://github.com/visd0m/yaged"
keywords = ["gif", "decoder", "encoder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzw = "0.10.0"
